@@ -8,6 +8,7 @@
   * Issue 140: View image captions
   * Fixed rotation of article with dark background
   * Fixed Issue 145: starred list won't fully sync
+  * Temporary workaround for Issue 144: No menu button when viewing articles
 
 == Version 1.49 ==
   * Added a preference to "Invert browsing articles"
